Profile Created-nikki

--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,10 @@
 
     <h3>Ben's Branch</h3>
     <h3>Morgan's Branch</h3>
-    <h3>Nikki's Branch</h3>
-
+    <div>
+        <h3>Nikki's Grostefon</h3>
+        <img src="ppic.jpg" />
+        <h2>Aquarius born.</h2>
+    </div>
 </body>
 </html>
