--- a/Index.html
+++ b/Index.html
@@ -11,6 +11,14 @@
     <h2>Develop Branch</h2>
 
     <h3>Ben's Branch</h3>
+    <div>
+        <a href="#"> <img src="img/coral_tank.jpg" alt="aquarium" class=""/></a>
+        <P>Hello, my name is Ben Thomas and am currently working working at a
+            retail job as well as a personal home business.
+        </P>
+    
+    
+    </div>
     <h3>Morgan's Branch</h3>
     <h3>Nikki's Branch</h3>
 
