--- a/Index.html
+++ b/Index.html
@@ -14,8 +14,8 @@
     <h3>Morgan's Branch</h3>
     <div>
         <h3>Nikki's Grostefon</h3>
-        <img src="ppic.jpg" />
-        <h2>Aquarius born.</h2>
+        <img src="ppic.jpg" >
+        <h2>Aquarius born!</h2>
     </div>
 </body>
 </html>
