--- a/Index.html
+++ b/Index.html
@@ -3,37 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Team Room 11</title>
+    <link rel="stylesheet" type="text/css" href="teamGit.css">
 </head>
 <body>
 
     <h1>Room 11</h1> 
     <h2>Do the Last Thing You Were Told</h2>
 
-    <h3>Ben's Branch</h3>
-
-    <h3>Morgan's Branch</h3>
-    <div>
-
-        <a href="#"> <img src="img/coral_tank.jpg" alt="aquarium" class=""/></a>
-        <P>Hello, my name is Ben Thomas and am currently working working at a
-            retail job as well as a personal home business. 
-        </P>
+    <div id = "container">
+        <div class = "team">
+            <h3>Ben Thomas</h3>
+            <P>Hello, my name is Ben Thomas and am currently working working at a
+                retail job as well as a personal home business. </P>
+            <a href="#"> <img src="img/coral_tank.jpg" alt="aquarium" class="" width="250px"></a>
+        </div>
     
-    
-=======
-        <h3>Nikki's Grostefon</h3>
-        <img src="ppic.jpg" >
-        <h2>Aquarius born!</h2>
+        <div class = "team">
+            <h3>Nikki Grostefon</h3>
+            <p>Aquarius born!</p>
+            <img src="ppic.jpg" width="250px">
+        </div>
 
-    <div id = "morgan">
-        <h3>Cindy Morgan</h3>
-        <p>I like math and running.</p>
-        <a href="#"><img src="http://i.huffpost.com/gen/845345/images/o-MATH-ANXIETY-facebook.jpg" width="200px"></a>
-
-
+        <div class = "team">
+            <h3>Cindy Morgan</h3>
+            <p>I like math and running.</p>
+            <a href="#"><img src="http://i.huffpost.com/gen/845345/images/o-MATH-ANXIETY-facebook.jpg" width="250px"></a>
+        </div>
     </div>
-    <h3>Nikki Branch</h3>
-
 </body>
 </html>
